build/log/idf_py_stderr_output_386954
In file included from /home/vicenterey/esp/projects_tf/model/person_detection/components/espressif__esp-tflite-micro/tensorflow/lite/micro/tflite_bridge/flatbuffer_conversions_bridge.h:19,
                 from /home/vicenterey/esp/projects_tf/model/person_detection/components/espressif__esp-tflite-micro/tensorflow/lite/micro/micro_allocator.h:26,
                 from /home/vicenterey/esp/projects_tf/model/person_detection/components/espressif__esp-tflite-micro/tensorflow/lite/micro/micro_interpreter.h:26,
                 from /home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc:6:
/home/vicenterey/esp/projects_tf/model/person_detection/components/espressif__esp-tflite-micro/tensorflow/lite/core/api/flatbuffer_conversions.h: In member function 'T* tflite::BuiltinDataAllocator::AllocatePOD()':
/home/vicenterey/esp/projects_tf/model/person_detection/components/espressif__esp-tflite-micro/tensorflow/lite/core/api/flatbuffer_conversions.h:46:24: warning: 'template<class _Tp> struct std::is_pod' is deprecated: use 'is_standard_layout && is_trivial' instead [-Wdeprecated-declarations]
   46 |     static_assert(std::is_pod<T>::value, "Builtin data structure must be POD.");
      |                        ^~~~~~
In file included from /home/vicenterey/esp/idf-tools/tools/xtensa-esp-elf/esp-13.2.0_20240305/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/bits/stl_pair.h:60,
                 from /home/vicenterey/esp/idf-tools/tools/xtensa-esp-elf/esp-13.2.0_20240305/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/utility:69,
                 from /home/vicenterey/esp/projects_tf/model/person_detection/components/espressif__esp-tflite-micro/tensorflow/lite/core/c/common.h:1463,
                 from /home/vicenterey/esp/projects_tf/model/person_detection/components/espressif__esp-tflite-micro/tensorflow/lite/c/common.h:31,
                 from /home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.h:22,
                 from /home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc:2:
/home/vicenterey/esp/idf-tools/tools/xtensa-esp-elf/esp-13.2.0_20240305/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/type_traits:819:5: note: declared here
  819 |     is_pod
      |     ^~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc: In function 'void setup_pwm(uint8_t)':
/home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc:64:3: warning: missing initializer for member 'ledc_timer_config_t::duty_resolution' [-Wmissing-field-initializers]
   64 |   };
      |   ^
/home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc:64:3: warning: missing initializer for member 'ledc_timer_config_t::freq_hz' [-Wmissing-field-initializers]
/home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc:64:3: warning: missing initializer for member 'ledc_timer_config_t::clk_cfg' [-Wmissing-field-initializers]
/home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc:64:3: warning: missing initializer for member 'ledc_timer_config_t::deconfigure' [-Wmissing-field-initializers]
/home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc:64:3: error: designator order for field 'ledc_timer_config_t::duty_resolution' does not match declaration order in 'ledc_timer_config_t'
/home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc:75:3: warning: missing initializer for member 'ledc_channel_config_t::gpio_num' [-Wmissing-field-initializers]
   75 |   };
      |   ^
/home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc:75:3: warning: missing initializer for member 'ledc_channel_config_t::intr_type' [-Wmissing-field-initializers]
/home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc:75:3: warning: missing initializer for member 'ledc_channel_config_t::duty' [-Wmissing-field-initializers]
/home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc:75:3: warning: missing initializer for member 'ledc_channel_config_t::hpoint' [-Wmissing-field-initializers]
/home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc:75:3: warning: missing initializer for member 'ledc_channel_config_t::flags' [-Wmissing-field-initializers]
/home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc:75:3: error: designator order for field 'ledc_channel_config_t::intr_type' does not match declaration order in 'ledc_channel_config_t'
make[3]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:118: esp-idf/main/CMakeFiles/__idf_main.dir/main_functions.cc.obj] Error 1
make[2]: *** [CMakeFiles/Makefile2:5675: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:2437: CMakeFiles/flash.dir/rule] Error 2
make: *** [Makefile:299: flash] Error 2
